@@ -1,3 +1,5 @@
+Add option to make your own font small
+
 Version 1.22.1 - Nov. 13, 2016
 Performance optimizations
 Fix initialization on first setup
